--- a/bicycles-actix/Cargo.toml
+++ b/bicycles-actix/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bicycles-http"
+name = "bicycles-actix"
 version = "0.1.0"
 authors = ["Dany Diaz <dany.diaz91@hotmail.com>"]
 edition = "2018"
@@ -7,5 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bicycles-core = {path = "../bicycles-core"}
+bicycles-diesel = {path = "../bicycles-diesel"}
 actix-web = "2.0"
 actix-rt = "1.0"
+uuid = {version="0.8", features=["serde", "v4"]}
